--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,12 @@ h4 {
   color: red;
 }
 
+.container {
+  width: 330px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 // Despues de 500px, aplica las sig reglas
 @media screen and (min-width: 500px) {
@@ -82,8 +88,17 @@ h4 {
 }
 
 
+@media screen and (min-width: 600px) and (max-width: 900px) {
+  .container {
+    width: 100%;
+  }
+}
 
-
+@media screen  and (min-width: 900px) {
+  .container {
+    width: 1024px;
+  }
+}
 
 // @media screen and (condition) {
 //   // CSS rules
